--- a/docs/markup.css
+++ b/docs/markup.css
@@ -2,77 +2,134 @@
     height: 100%;
     width: 100%;
     background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .wrapper .content {
-    width: 600px;
-    padding: 30px;
-    border: 3px solid white;
-    border-radius: 5px;
-    background: #cecece;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 80px 30px 30px;
     font-family: monospace;
 }
 
-.wrapper .content #title[h1] {
-    color: black;
-    margin-top: 2px;
-    margin-bottom: 8px;
-    font-size: 40px;
-    content: "cssed";
+.wrapper .content .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.wrapper .content .message[a][href="https://github.com/jwanner83/cssed/"][target="_blank"] {
-    color: #6a6a6a;
+.wrapper .content .header .intro {}
+
+.wrapper .content .header .intro #title[h1] {
+    color: white;
+    margin-top: 2px;
+    margin-bottom: 8px;
+    font-size: 50px;
+    content: "curssed";
+}
+
+.wrapper .content .header .intro .message[a][href="https://github.com/jwanner83/curssed/"][target="_blank"] {
+    color: #9b9b9b;
     margin-bottom: 0;
+    margin-left: 2px;
     font-size: 16px;
     line-height: 22px;
     content: "the complete css framework";
+    text-decoration: none;
+}
+
+.wrapper .content .header .github[a][href="https://github.com/jwanner83/curssed/"][target="_blank"] {
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+
+.wrapper .content .header .github .image[img][src="assets/github.png"][alt="GitHub"] {
+    width: 100%;
+    height: 100%;
 }
 
 .wrapper .content .sub[h2] {
-    content: "Getting started";
+    color: white;
     margin-top: 40px;
+    content: "description";
+}
+
+.wrapper .content .text[p] {
+    color: #9b9b9b;
+    line-height: 20px;
+    content: "a framework for creating web experiences without knowing any other language than valid css. "
+}
+
+.wrapper .content .sub[h2] {
+    content: "quick start";
 }
 
 .wrapper .content .code {
     margin-top: 18px;
-    background: #c4c4c4;
+    background: #2d2d2d;
     border-radius: 5px;
     padding: 16px;
+    color: white;
 }
 
 .wrapper .content .code .first {
-    content: "import { render } from 'cssed'<br><br>render(<br>";
+    content: "import { render } from './curssed.js'";
+}
+
+.wrapper .content .code .first {
+    content: "<br><br>render(document.body, {<br>";
 }
 
 .wrapper .content .code .second {
     margin-left: 20px;
-    content: "document.querySelector('#app'),<br>`<br>.wrapper {<br>";
+    content: "markup: {<br>";
 }
 
 .wrapper .content .code .third {
     margin-left: 40px;
-    content: "content: 'hello world';<br>color: blue;<br>";
+    content: "content: '.text[p] { content: \"hello world\"; color: red; }'";
 }
 
 .wrapper .content .code .second {
-    content: "}<br>`<br>";
+    content: "}<br>";
 }
 
 .wrapper .content .code .first {
-    content: "}";
+    content: "}).then()";
 }
 
 .wrapper .content .sub[h2] {
-    content: "Meme";
-    margin-top: 40px;
+    content: "documentation";
 }
 
-.wrapper .content .meme[img][src="https://i.imgflip.com/6i5g81.jpg"] {
+.wrapper .content .button[a][href="https://github.com/jwanner83/curssed#usage"][target="_blank"] {
+    background: white;
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.wrapper .content .button .label[p] {
+    content: "visit the documentation";
+    margin: 0;
+}
+
+.wrapper .content .button .arrow[img][src="assets/arrow.png"][alt="Arrow"] {
+    width: 30px;
+    height: 30px;
+}
+
+.wrapper .content .sub[h2] {
+    content: "meme";
+}
+
+.wrapper .content .meme[img][src="assets/meme.jpg"][alt="meme"] {
     width: 100%;
-    height: 300px;
+    height: 250px;
     object-fit: cover;
 }
