--- a/docs/public/index.css
+++ b/docs/public/index.css
@@ -45,7 +45,7 @@
     margin-top: 2px;
     margin-bottom: 8px;
     font-size: 50px;
-    content: 'index';
+    content: 'curssed';
 }
 
 .wrapper .content .header .intro .message[a][href="https://github.com/jwanner83/curssed/"][target="_blank"]
@@ -66,11 +66,7 @@
     height: 60px;
 }
 
-.wrapper
-.content
-.header
-.github
-.image[img][src='assets/github.png'][alt='GitHub'] {
+.wrapper .content .header .github .image[img][src='assets/github.png'][alt='GitHub'] {
     width: 100%;
     height: 100%;
 }
